trunk/v2/views/css/v1.css
/* volunteer1 styles - will override base styling */
.content a {
	color: #232323;
	text-decoration: none;
	border-bottom: 1px dotted #232323;
}

.content a:hover {
	border-bottom: 1px solid black;
	color: black;
}

#search {
	color: #CCCCCC;
}

.home.blurb {
	padding-bottom: 20px;
}

.menu {
}

.menuitem {
	color: white;
	margin-bottom: 5px;
	margin-right: 10px;
}

.loginemail {
	font-weight: bold;
}

.loginlink {
	width: 510px;
	overflow: hidden;
}

.menuend {
	clear: both;
}

.job {
}

div.volunteer {
	padding-left: 85px;
}

span.volmenu {
	margin-right: 20px;
}

.volunteer.stats {
	margin-top: 10px;
	padding-top: 5px;
}

div.organization {
	padding-left: 85px;
}

.login {
}

.stats {
}

.dashboard {
}

div.content {
	clear: both;
	margin-bottom: 20px;
	margin-top: 20px;
	padding: 8px;
	padding-bottom: 20px;
	border-left: 1px black solid;
	border-right: 1px black solid;
	width: 978px;
}

.organization.schedule {
	margin-top: 20px;
}

.schedule.add, .schedule.list {
	float: left;
	border: 1px solid black;
	width: 45%;
	height: 100%;
	margin: 10px;
	padding: 10px;
}

div.footer, div.footer a {
	color: white;
	text-decoration: none;
	width: 997px;
	height: 30px;
	padding-top: 10px;
	margin-top: -20px;
	background: #999999;
}
div.footer a:hover {
	color: yellow;
}

div.footeritem {
	float: left;
	margin-left: 125px;
}

.bod {
	background-color:#FFFFFF;
	color:#000000;
	font-family:Arial, Helvetica, sans-serif; 
}

.header {  
	margin:0px;
}

.companyname {
	background-color:#dc0a0a;
	width:356px;
	height: 70px;
	padding:10px;
	/* position:absolute; */
	float: left;
	text-align:center;
	border-bottom-style: solid;
	border-bottom-width: thick;
	border-bottom-color:#999999;
}

#login_form .login-input {
	margin-top: 4px;
}

#login_form .login_button {
	float: right;
	margin-right: 14px;
}

#login_form {
	width: 270px;
	height: 124px;
	padding-left: 14px;
	background: #333333;
	border: 1px #CCCCCC solid;
	color: white;
	font-size: 11px;
	position: relative;
	top: 0px;
	left: 0px;
	z-index: 10;
}

.login_input, .login_input a {
	border: none;
	text-decoration: none;
	color: white;
}

.login_input a:hover {
	color: yellow;
}

.login_input { 
	/* position:absolute; */
	float: left;
	top: 0px; right: 0px;
	background-color:#333333;
	width:600px; 
	height:70px; 
	padding:10px;
	color: #000000;
	border-bottom-style:solid;
	border-bottom-width: 5px;
	border-bottom-color:#999999;
}

.login_input .login_button1 { 
	border: 1px solid #006;
	right:105px;
	top: 12px;
	border:none;
	background-color:#333333;
	font-weight:bold;
	font-size:11px;
	width:50px;
}

.login_input .login_button1:hover { 
	border: 1px solid #006;
	/* position:absolute; */
	right:105px;
	top: 12px;
	border:none;
	background-color:#333333;
	color:#FFFFFF;
	font-weight:bold;
	width:50px;
}

.login_input .login_button2 { 
	border: 1px solid #006;
	/* position:absolute; */
	right:40px;
	top: 12px;
	border:none;
	background-color:#333333;
	font-weight:bold;
	font-size:11px;
	width:50px;
}

.login_input .login_button2:hover { 
	border: 1px solid #006;
	/* position:absolute; */
	right:40px;
	top: 12px;
	border:none;
	background-color:#333333;
	color:#FFFFFF;
	font-weight:bold;
	width:50px;
}

.login_input .input_box1 {
	/* position:absolute; */
	width:250px;
	right: 20px;
	bottom: 35px;
}

.login_input .input_box2 {
	/* position:absolute; */
	width:250px;
	right: 20px;
	bottom: 12px;
}

.login_input .ename {
	/* position:absolute; */
	right: 280px;
	bottom:33px;
	color:#FFFFFF;
	font-weight:bold;
	font-size:12px;
}

.login_input .pname {
	/* position:absolute; */
	right: 280px;
	bottom:12px;
	color:#FFFFFF;
	font-weight:bold;
	font-size:12px;
}

.login_input .spacer {
	/* position:absolute; */
	right: 99px;
	top: 8px;
}

.page_title, h1, h2, h3 {
	color:#2e8be9;
}
.page_title, h1 {
	font-size:30px;
}

h2 {
	font-size:25px;
}

h3 {
	font-size:20px;
}

h4 {
	font-size:15px;
}

.label {
	/* position:relative; */
	top:180px;
	left:25%;
	color:#000000;
	font-size:16px;
	font-weight:bold;
}

.label .signup_input1 {
	/* position:absolute; */
	top:68px;
	left:105px;
	width:300px;
}

.label .signup_input2 {
	/* position:absolute; */
	top:108px;
	width:300px;
	left:105px;
}

.label .signup_input3 {
	/* position:absolute; */
	top:160px;
	width:300px;
	left:105px;
}

.label .sub_btn {
	/* position:absolute; */
	left:125px;
	width:120px;
	height:30px;
	background: url('sbtnblue.jpg') no-repeat;
	border:none;
}

.label .sub_btn:hover  {
	background: url('sbtnwhite.jpg') no-repeat;
}

.label .reset_btn {
	/* position:absolute; */
	left:275px;
	width:100px;
	height:23px;
	width:120px;
	height:30px;
	background: url('rbtnblue.jpg') no-repeat;
	border:none;
	border: none;
}

.label .reset_btn:hover  {
	background: url('rbtnwhite.jpg') no-repeat;
}

.signup_pg2_label  {
	font-size:24px;
	/* position:relative; */
	font-family:Arial, Helvetica, sans-serif;
}

.signup_pg2_label .org_info {
	/* position:relative; */
	top:155px;
	left:275px;
}

.signup_pg2_label .input_fld {
	/* position:relative; */
	top:160px;
	left:295px;
	font-size:16px;
	font-weight:bold; 
}

.signup_pg2_label .org_name {
	/* position:relative; */
	top:0px;
	left:8px;
	width:260px;
}

.signup_pg2_label .org_address  {
	/* position:relative; */
	top:0px;
	left:90px;   
	width:260px;
}

.signup_pg2_label .org_phnum {
	/* position:relative; */
	top:0px;
	left:40px; 
	width:260px;  
}

.signup_pg2_label .cnt_lname {
	/* position:relative; */
	top:0px;
	left:75px;
	width:260px; 
}

.signup_pg2_label .cnt_fname {
	/* position:relative; */
	top:0px;
	left:75px;
	width:260px; 
}

.signup_pg2_label .cnt_phnum {
	/* position:relative; */
	top:0px;
	left:42px;
	width:260px; 
}

.sub_btn2 {
	/* position:relative; */
	left:175px;
	top:0px;
	width:120px;
	height:30px;
	background: url('sbtnblue.jpg') no-repeat;
	border:none;
}

.sub_btn2:hover {
	background: url('sbtnwhite.jpg') no-repeat;
}

.reset_btn2 {
	/* position:relative; */
	left:175px;
	top:0px;
	width:120px;
	height:30px;
	background: url('rbtnblue.jpg') no-repeat;
	border:none;
}

.reset_btn2:hover {
	background: url('rbtnwhite.jpg') no-repeat;
}

.searchterm,.regionterm {
	background: yellow;
	font-style: italic;
}
.jobblurb {
	border-bottom: 1px dotted black;
}
.searchtitle {
	font-weight: bold;
	color: white;
}

